--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>TP 3</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+
     <!-- bootstrap -->
     <link
       rel="stylesheet"
@@ -21,9 +18,11 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Axios -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
+
   <body onload="start()">
     <div
       class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm"
@@ -42,16 +41,16 @@
       <div class="input-group mb-5 offset-4 col-4">
         <input id="city-input" type="text" class="form-control" placeholder="Rentrer le nom d'une ville">
         <div class="input-group-append">
-          <button id="city-input-button" class="btn btn-success" type="submit">Actualiser</button>
+          <button id="city-input-button" class="btn btn-success" type="submit" onclick="CityChoice()">Actualiser</button>
         </div>
       </div>
     </div>
-
+ 
     <div class="container">
         <div class="card-deck mb-3 text-center">
           <div class="card mb-4 shadow-sm offset-sm-1">
             <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Aujourd'hui</h4>
+              <h4 class="my-0 font-weight-normal" id="cityDisplay">Maintenant --> </h4>
             </div>
             <div class="card-body">
               <h2 id="today-forecast-main" class="card-title">
@@ -59,6 +58,7 @@
               <div>
                 <p id="today-forecast-more-info"></p>
                 <div id="icon-weather-container" ></div>
+                <div id="icon-weather-main" class=""></div>
                 <h3 id="today-forecast-temp"> </h3>
               </div>             
             </div>
@@ -90,7 +90,7 @@
             </h2>
             <div>
               <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
+              <div id="icon-weather-container" class=""></div>
               <h3 id="today-forecast-temp"> </h3>
             </div>
           </div>
@@ -104,7 +104,7 @@
             </h2>
             <div>
               <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
+              <div id="icon-weather-container" class=""></div>
               <h3 id="today-forecast-temp"> </h3>
             </div>
           </div>
