--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             <h4 class="my-0 font-weight-normal">Demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="today-forecast-main-d1" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="today-forecast-more-info-d1"></p>
+              <div id="icon-weather-1" ></div>
+              <h3 id="today-forecast-temp-d1"> </h3>
             </div>
           </div>
         </div>
@@ -86,12 +86,12 @@
             <h4 class="my-0 font-weight-normal">Après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="today-forecast-main-d2" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" class=""></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="today-forecast-more-info-d2"></p>
+              <div id="icon-weather-2" class=""></div>
+              <h3 id="today-forecast-temp-d2"> </h3>
             </div>
           </div>
         </div>
@@ -100,12 +100,12 @@
             <h4 class="my-0 font-weight-normal">Encore après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="today-forecast-main-d3" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" class=""></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="today-forecast-more-info-d3"></p>
+              <div id="icon-weather-3" class=""></div>
+              <h3 id="today-forecast-temp-d3"> </h3>
             </div>
           </div>
         </div>
